# CoolChat

./: .gitignore  CoolChat.sln
Client/: Client.cpp  Client.h  Client.vcxproj  Main.cpp  RootView.cpp  RootView.h
GUIClient/: CMakeLists.txt  loginwindow.ui  main.cpp
GUIClient/Auth/: AuthWindow.cpp  AuthWindow.h  AuthWindow.ui  LoginWidget.cpp  LoginWidget.h  LoginWidget.ui  RegistrationWidget.cpp  RegistrationWidget.h  RegistrationWidget.ui
GUIClient/Chat/: ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  DialogWidget.cpp  DialogWidget.h  DialogWidget.ui  InputWidget.cpp  InputWidget.h  InputWidget.ui  MessageWidget.cpp  MessageWidget.h  MessageWidget.ui
GUIClient/Connection/: Client.cpp  Client.h  DialogUpdateWorker.cpp  DialogUpdateWorker.h
Server/: AsyncTask.cpp  AsyncTask.h  AsyncTaskManager.cpp  AsyncTaskManager.h  AsyncTasks.cpp  AsyncTasks.h  Constants.cpp  Constants.h  Main.cpp  MessageManager.cpp  MessageManager.h  SerializationHelpers.h  Server.cpp  Server.h  Server.vcxproj  Session.cpp  Session.h  ThreadWrapper.cpp  ThreadWrapper.h  UserManager.cpp  UserManager.h
Server/Pool/: SafePool.h  SharedFromThis.h  SimplestPoolTS.h
